--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         <h2 style="text-align: center; color: var(--electric-purple); margin-bottom: 2rem;">Our Portfolio</h2>
         <div class="portfolio-grid">
             <a href="https://www.clickspringdesign.com/portfolio/al-araby-doha-headquarters/" class="portfolio-item" target="_blank">
-                <img src="studio1.webp" alt="Sports Broadcast"width="400" height="250">
+                <img src="studio1.jpg" alt="Sports Broadcast"width="400" height="250">
                 <div class="portfolio-overlay">
                     <h4>Global News Broadcast</h4>
                     <p>Multi-cam live production</p>
@@ -365,7 +365,7 @@
             </a>
             
             <a href="https://www.clickspringdesign.com/portfolio/al-araby-doha-headquarters/" class="portfolio-item" target="_blank">
-                <img src="pcr1.webp" alt="Virtual Festival"width="400" height="250">
+                <img src="pcr1.jpg" alt="Virtual Festival"width="400" height="250">
                 <div class="portfolio-overlay">
                     <h4>PCR Equiped with advanced Technology</h4>
                     <p>360° interactive live stream</p>
@@ -373,7 +373,7 @@
             </a>
 
             <a href="https://www.clickspringdesign.com/portfolio/al-araby-doha-headquarters/" class="portfolio-item" target="_blank">
-                <img src="blackbox.webp" alt="AR Conference" width="400" height="250">
+                <img src="blackbox.jpg" alt="AR Conference" width="400" height="250">
                 <div class="portfolio-overlay">
                     <h4>Corporate AR Conference</h4>
                     <p>Hybrid event production</p>
